# fcgiLearnings

./: Application.cpp  Myroot.h  NetworkData.h  NetworkManagerIF.xml  NetworkProxy.h  NetworkProxyImpl.h  README.md
restcgi-1.0.1/: Makefile  Makefile.in  config.h  config.h.in  config.status  configure  configure.ac  libtool
restcgi-1.0.1/.svn/: all-wcprops  entries
restcgi-1.0.1/autom4te.cache/: output.1  requests  traces.0  traces.1  traces.2
restcgi-1.0.1/doc/.svn/: all-wcprops  entries
restcgi-1.0.1/doc/dxydocs/: annotated.html  apidefs_8h-source.html  classrestcgi_1_1bad__request-members.html  classrestcgi_1_1bad__request.html  classrestcgi_1_1conflict-members.html  classrestcgi_1_1conflict.html  classrestcgi_1_1content-members.html  classrestcgi_1_1content.html  classrestcgi_1_1content__hdr-members.html  classrestcgi_1_1content__hdr.html  classrestcgi_1_1cookie-members.html  classrestcgi_1_1cookie.html  classrestcgi_1_1cookies-members.html  classrestcgi_1_1cookies.html  classrestcgi_1_1ctmpl-members.html  classrestcgi_1_1ctmpl.html  classrestcgi_1_1date__time-members.html  classrestcgi_1_1date__time.html  (+155 more)
restcgi-1.0.1/src/: Makefile  Makefile.in  content.cpp  content.lo  cookie.cpp  ctmpl.lo  date_time.cpp  date_time.lo  endpoint.cpp  endpoint.lo  env.cpp  env.h  env.lo  exception.cpp  exception.h  hdr.lo  httpsyn.cpp  httpsyn.lo  librestcgi.la  method.cpp  method.h  method.lo  method_e.cpp  method_e.h  method_e.lo  resource.h  resource.lo  rest.cpp  rest.h  rest.lo  status_code_e.cpp  status_code_e.h  status_code_e.lo  utils.h  version.cpp  version.h
restcgi-1.0.1/test/: Makefile  Makefile.in  restcgi_ctmpl.cpp  restcgi_date_time.cpp  restcgi_method.cpp  restcgi_resource.cpp  restcgi_status_code.cpp  restcgi_utils.cpp  restcgi_version.cpp
tests/: CMakeLists.txt  NetworkDataTest.cpp  TestAll.cpp
(+53 files in other folders)
